--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
-    "passport-saml": "^3.2.1"
+    "passport-saml": "^3.2.1",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {},
   "scripts": {
